fixed encounter menu z-index

--- a/interface/themes/style_pdf.css
+++ b/interface/themes/style_pdf.css
@@ -922,6 +922,7 @@ font-size:9pt;
     border-left: 1px solid #000000;
     border-right: 1px solid #000000;
     border-bottom: 1px solid #000000;
+    z-index:20;
 }
 
 #sddm div a
