--- a/interface/themes/style_tan.css
+++ b/interface/themes/style_tan.css
@@ -1029,6 +1029,7 @@ padding-top: 3px;
 padding-left: 0px;
 padding-right: 0px;
 padding-bottom: 4px;
+z-index:20;
 }
 
 #sddm div a
